bindings/rust/wasmedge-sys/docs/wasmedge.h

/// WASM Value type enumeration.
enum WasmEdge_ValType {
  WasmEdge_ValType_I32 = 0x7FU,
  WasmEdge_ValType_I64 = 0x7EU,
  WasmEdge_ValType_F32 = 0x7DU,
  WasmEdge_ValType_F64 = 0x7CU,
  WasmEdge_ValType_V128 = 0x7BU,
  WasmEdge_ValType_FuncRef = 0x70U,
  WasmEdge_ValType_ExternRef = 0x6FU
};
/// WasmEdge string struct.
typedef struct WasmEdge_String {
  uint32_t Length;
  const char *Buf;
} WasmEdge_String;
/// Opaque struct of WasmEdge store.
typedef struct WasmEdge_StoreContext WasmEdge_StoreContext;
/// Opaque struct of WasmEdge function type.
typedef struct WasmEdge_FunctionTypeContext WasmEdge_FunctionTypeContext;
/// Deletion of the WasmEdge_String.
///
/// After calling this function, the resources in the WasmEdge_String object
/// will be released and the object should __NOT__ be used.
///
/// \param Str the WasmEdge_String object to delete.
WASMEDGE_CAPI_EXPORT extern void WasmEdge_StringDelete(WasmEdge_String Str);
/// List the exported memory names.
///
/// After instantiating a WASM module, the WASM module is registered into the
/// store context as an anonymous module. Then you can call this function to get
/// the exported memory list of the anonymous module. If you want to get the
/// memory list of the registered named modules in the store context, please
/// call `WasmEdge_StoreListMemoryRegistered` instead.
/// The returned memory names are created and stored into the `Names` array,
/// and the caller should call the `WasmEdge_StringDelete` to delete them. If
/// the `Names` buffer length is smaller than the result of the exported memory
/// list size, the overflowed return values will be discarded.
///
/// \param Cxt the WasmEdge_StoreContext.
/// \param [out] Names the output WasmEdge_String buffer of the memory names.
/// \param Len the buffer length.
///
/// \returns actual exported memory list size.
WASMEDGE_CAPI_EXPORT extern uint32_t
WasmEdge_StoreListMemory(const WasmEdge_StoreContext *Cxt,
                         WasmEdge_String *Names, const uint32_t Len);
/// Get the exported memory list length of the registered module in store.
///
/// \param Cxt the WasmEdge_StoreContext.
/// \param ModuleName the module name WasmEdge_String.
///
/// \returns the exported memory list length of the module.
WASMEDGE_CAPI_EXPORT extern uint32_t
WasmEdge_StoreListMemoryRegisteredLength(const WasmEdge_StoreContext *Cxt,
                                         const WasmEdge_String ModuleName);
/// List the exported memory names of the registered module.
///
/// After registering a WASM module, you can call this function to get the
/// exported memory list of the registered module by the module name.
/// The returned memory names are created and stored into the `Names` array,
/// and the caller should call the `WasmEdge_StringDelete` to delete them. If
/// the `Names` buffer length is smaller than the result of the exported memory
/// list size, the overflowed return values will be discarded.
///
/// \param Cxt the WasmEdge_StoreContext.
/// \param ModuleName the module name WasmEdge_String.
/// \param [out] Names the output WasmEdge_String buffer of the memory names.
/// \param Len the buffer length.
///
/// \returns actual exported memory list size of the module.
WASMEDGE_CAPI_EXPORT extern uint32_t
WasmEdge_StoreListMemoryRegistered(WasmEdge_StoreContext *Cxt,
                                   const WasmEdge_String ModuleName,
                                   WasmEdge_String *Names, const uint32_t Len);
/// Get the length of exported global list in store.
///
/// If you want to get the global list of the registered named modules in the
/// store context, please call `WasmEdge_StoreListGlobalRegisteredLength`
/// instead.
///
/// \param Cxt the WasmEdge_StoreContext.
///
/// \returns length of the exported global list.
WASMEDGE_CAPI_EXPORT extern uint32_t
WasmEdge_StoreListGlobalLength(const WasmEdge_StoreContext *Cxt);
/// List the exported global names.
///
/// After instantiating a WASM module, the WASM module is registered into the
/// store context as an anonymous module. Then you can call this function to get
/// the exported global list of the anonymous module. If you want to get the
/// global list of the registered named modules in the store context, please
/// call `WasmEdge_StoreListGlobalRegistered` instead.
/// The returned global names are created and stored into the `Names` array,
/// and the caller should call the `WasmEdge_StringDelete` to delete them. If
/// the `Names` buffer length is smaller than the result of the exported global
/// list size, the overflowed return values will be discarded.
///
/// \param Cxt the WasmEdge_StoreContext.
/// \param [out] Names the output WasmEdge_String buffer of the global names.
/// \param Len the buffer length.
///
/// \returns actual exported global list size.
WASMEDGE_CAPI_EXPORT extern uint32_t
WasmEdge_StoreListGlobal(const WasmEdge_StoreContext *Cxt,
                         WasmEdge_String *Names, const uint32_t Len);
/// Get the exported global list length of the registered module in store.
///
/// \param Cxt the WasmEdge_StoreContext.
/// \param ModuleName the module name WasmEdge_String.
///
/// \returns the exported global list length of the module.
WASMEDGE_CAPI_EXPORT extern uint32_t
WasmEdge_StoreListGlobalRegisteredLength(const WasmEdge_StoreContext *Cxt,
                                         const WasmEdge_String ModuleName);
/// List the exported global names of the registered module.
///
/// After registering a WASM module, you can call this function to get the
/// exported global list of the registered module by the module name.
/// The returned global names are created and stored into the `Names` array,
/// and the caller should call the `WasmEdge_StringDelete` to delete them. If
/// the `Names` buffer length is smaller than the result of the exported global
/// list size, the overflowed return values will be discarded.
///
/// \param Cxt the WasmEdge_StoreContext.
/// \param ModuleName the module name WasmEdge_String.
/// \param [out] Names the output WasmEdge_String buffer of the global names.
/// \param Len the buffer length.
///
/// \returns actual exported global list size of the module.
WASMEDGE_CAPI_EXPORT extern uint32_t
WasmEdge_StoreListGlobalRegistered(WasmEdge_StoreContext *Cxt,
                                   const WasmEdge_String ModuleName,
                                   WasmEdge_String *Names, const uint32_t Len);
/// Get the length of registered module list in store.
///
/// \param Cxt the WasmEdge_StoreContext.
///
/// \returns length of registered named module list.
WASMEDGE_CAPI_EXPORT extern uint32_t
WasmEdge_StoreListModuleLength(const WasmEdge_StoreContext *Cxt);
/// List the registered module names.
///
/// This function will list all registered module names.
/// The returned module names are created and stored in `Names` array, and the
/// caller should call `WasmEdge_StringDelete` to delete them. If the `Names`
/// buffer length is smaller than the result of the registered named module list
/// size, the overflowed return values will be discarded.
///
/// \param Cxt the WasmEdge_StoreContext.
/// \param [out] Names the output names WasmEdge_String buffer of named modules.
/// \param Len the buffer length.
///
/// \returns actual registered named module list size.
WASMEDGE_CAPI_EXPORT extern uint32_t
WasmEdge_StoreListModule(WasmEdge_StoreContext *Cxt, WasmEdge_String *Names,
                         const uint32_t Len);
/// Deletion of the WasmEdge_StoreContext.
///
/// After calling this function, the context will be freed and should __NOT__ be
/// used.
///
/// \param Cxt the WasmEdge_StoreContext to delete.
WASMEDGE_CAPI_EXPORT extern void
WasmEdge_StoreDelete(WasmEdge_StoreContext *Cxt);
/// <<<<<<<< WasmEdge store functions <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<

/// >>>>>>>> WasmEdge function type functions >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>

/// Creation of the WasmEdge_FunctionTypeContext.
///
/// The caller owns the object and should call `WasmEdge_FunctionTypeDelete` to
/// free it.
///
/// \param ParamList the value types list of parameters. NULL if the length is
/// 0.
/// \param ParamLen the ParamList buffer length.
/// \param ReturnList the value types list of returns. NULL if the length is 0.
/// \param ReturnLen the ReturnList buffer length.
///
/// \returns pointer to context, NULL if failed.
WASMEDGE_CAPI_EXPORT extern WasmEdge_FunctionTypeContext *
WasmEdge_FunctionTypeCreate(const enum WasmEdge_ValType *ParamList,
                            const uint32_t ParamLen,
                            const enum WasmEdge_ValType *ReturnList,
                            const uint32_t ReturnLen);
/// Get the parameter types list length from the WasmEdge_FunctionTypeContext.
///
/// \param Cxt the WasmEdge_FunctionTypeContext.
///
/// \returns the parameter types list length.
WASMEDGE_CAPI_EXPORT extern uint32_t WasmEdge_FunctionTypeGetParametersLength(
    const WasmEdge_FunctionTypeContext *Cxt);
/// Get the parameter types list from the WasmEdge_FunctionTypeContext.
///
/// If the `List` buffer length is smaller than the length of the parameter type
/// list, the overflowed values will be discarded.
///
/// \param Cxt the WasmEdge_FunctionTypeContext.
/// \param [out] List the WasmEdge_ValType buffer to fill the parameter value
/// types.
/// \param Len the value type buffer length.
///
/// \returns the actual parameter types list length.
WASMEDGE_CAPI_EXPORT extern uint32_t
WasmEdge_FunctionTypeGetParameters(const WasmEdge_FunctionTypeContext *Cxt,
                                   enum WasmEdge_ValType *List,
                                   const uint32_t Len);
/// Get the return types list length from the WasmEdge_FunctionTypeContext.
///
/// \param Cxt the WasmEdge_FunctionTypeContext.
///
/// \returns the return types list length.
WASMEDGE_CAPI_EXPORT extern uint32_t
WasmEdge_FunctionTypeGetReturnsLength(const WasmEdge_FunctionTypeContext *Cxt);
/// Get the return types list from the WasmEdge_FunctionTypeContext.
///
/// If the `List` buffer length is smaller than the length of the return type
/// list, the overflowed values will be discarded.
///
/// \param Cxt the WasmEdge_FunctionTypeContext.
/// \param [out] List the WasmEdge_ValType buffer to fill the return value
/// types.
/// \param Len the value type buffer length.
///
/// \returns the actual return types list length.
WASMEDGE_CAPI_EXPORT extern uint32_t
WasmEdge_FunctionTypeGetReturns(const WasmEdge_FunctionTypeContext *Cxt,
                                enum WasmEdge_ValType *List,
                                const uint32_t Len);
/// Deletion of the WasmEdge_FunctionTypeContext.
///
/// After calling this function, the context will be freed and should __NOT__ be
/// used.
///
/// \param Cxt the WasmEdge_FunctionTypeContext to delete.
WASMEDGE_CAPI_EXPORT extern void
WasmEdge_FunctionTypeDelete(WasmEdge_FunctionTypeContext *Cxt);