bindings/rust/wasmedge-sys/docs/wasmedge.rs

extern "C" {
    #[doc = " List the exported memory names."]
    #[doc = ""]
    #[doc = " After instantiating a WASM module, the WASM module is registered into the"]
    #[doc = " store context as an anonymous module. Then you can call this function to get"]
    #[doc = " the exported memory list of the anonymous module. If you want to get the"]
    #[doc = " memory list of the registered named modules in the store context, please"]
    #[doc = " call `WasmEdge_StoreListMemoryRegistered` instead."]
    #[doc = " The returned memory names are created and stored into the `Names` array,"]
    #[doc = " and the caller should call the `WasmEdge_StringDelete` to delete them. If"]
    #[doc = " the `Names` buffer length is smaller than the result of the exported memory"]
    #[doc = " list size, the overflowed return values will be discarded."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_StoreContext."]
    #[doc = " \\param [out] Names the output WasmEdge_String buffer of the memory names."]
    #[doc = " \\param Len the buffer length."]
    #[doc = ""]
    #[doc = " \\returns actual exported memory list size."]
    pub fn WasmEdge_StoreListMemory(
        Cxt: *const WasmEdge_StoreContext,
        Names: *mut WasmEdge_String,
        Len: u32,
    ) -> u32;
}
extern "C" {
    #[doc = " Get the exported memory list length of the registered module in store."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_StoreContext."]
    #[doc = " \\param ModuleName the module name WasmEdge_String."]
    #[doc = ""]
    #[doc = " \\returns the exported memory list length of the module."]
    pub fn WasmEdge_StoreListMemoryRegisteredLength(
        Cxt: *const WasmEdge_StoreContext,
        ModuleName: WasmEdge_String,
    ) -> u32;
}
extern "C" {
    #[doc = " List the exported memory names of the registered module."]
    #[doc = ""]
    #[doc = " After registering a WASM module, you can call this function to get the"]
    #[doc = " exported memory list of the registered module by the module name."]
    #[doc = " The returned memory names are created and stored into the `Names` array,"]
    #[doc = " and the caller should call the `WasmEdge_StringDelete` to delete them. If"]
    #[doc = " the `Names` buffer length is smaller than the result of the exported memory"]
    #[doc = " list size, the overflowed return values will be discarded."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_StoreContext."]
    #[doc = " \\param ModuleName the module name WasmEdge_String."]
    #[doc = " \\param [out] Names the output WasmEdge_String buffer of the memory names."]
    #[doc = " \\param Len the buffer length."]
    #[doc = ""]
    #[doc = " \\returns actual exported memory list size of the module."]
    pub fn WasmEdge_StoreListMemoryRegistered(
        Cxt: *mut WasmEdge_StoreContext,
        ModuleName: WasmEdge_String,
        Names: *mut WasmEdge_String,
        Len: u32,
    ) -> u32;
}
extern "C" {
    #[doc = " Get the length of exported global list in store."]
    #[doc = ""]
    #[doc = " If you want to get the global list of the registered named modules in the"]
    #[doc = " store context, please call `WasmEdge_StoreListGlobalRegisteredLength`"]
    #[doc = " instead."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_StoreContext."]
    #[doc = ""]
    #[doc = " \\returns length of the exported global list."]
    pub fn WasmEdge_StoreListGlobalLength(Cxt: *const WasmEdge_StoreContext) -> u32;
}
extern "C" {
    #[doc = " List the exported global names."]
    #[doc = ""]
    #[doc = " After instantiating a WASM module, the WASM module is registered into the"]
    #[doc = " store context as an anonymous module. Then you can call this function to get"]
    #[doc = " the exported global list of the anonymous module. If you want to get the"]
    #[doc = " global list of the registered named modules in the store context, please"]
    #[doc = " call `WasmEdge_StoreListGlobalRegistered` instead."]
    #[doc = " The returned global names are created and stored into the `Names` array,"]
    #[doc = " and the caller should call the `WasmEdge_StringDelete` to delete them. If"]
    #[doc = " the `Names` buffer length is smaller than the result of the exported global"]
    #[doc = " list size, the overflowed return values will be discarded."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_StoreContext."]
    #[doc = " \\param [out] Names the output WasmEdge_String buffer of the global names."]
    #[doc = " \\param Len the buffer length."]
    #[doc = ""]
    #[doc = " \\returns actual exported global list size."]
    pub fn WasmEdge_StoreListGlobal(
        Cxt: *const WasmEdge_StoreContext,
        Names: *mut WasmEdge_String,
        Len: u32,
    ) -> u32;
}
extern "C" {
    #[doc = " Get the exported global list length of the registered module in store."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_StoreContext."]
    #[doc = " \\param ModuleName the module name WasmEdge_String."]
    #[doc = ""]
    #[doc = " \\returns the exported global list length of the module."]
    pub fn WasmEdge_StoreListGlobalRegisteredLength(
        Cxt: *const WasmEdge_StoreContext,
        ModuleName: WasmEdge_String,
    ) -> u32;
}
extern "C" {
    #[doc = " List the exported global names of the registered module."]
    #[doc = ""]
    #[doc = " After registering a WASM module, you can call this function to get the"]
    #[doc = " exported global list of the registered module by the module name."]
    #[doc = " The returned global names are created and stored into the `Names` array,"]
    #[doc = " and the caller should call the `WasmEdge_StringDelete` to delete them. If"]
    #[doc = " the `Names` buffer length is smaller than the result of the exported global"]
    #[doc = " list size, the overflowed return values will be discarded."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_StoreContext."]
    #[doc = " \\param ModuleName the module name WasmEdge_String."]
    #[doc = " \\param [out] Names the output WasmEdge_String buffer of the global names."]
    #[doc = " \\param Len the buffer length."]
    #[doc = ""]
    #[doc = " \\returns actual exported global list size of the module."]
    pub fn WasmEdge_StoreListGlobalRegistered(
        Cxt: *mut WasmEdge_StoreContext,
        ModuleName: WasmEdge_String,
        Names: *mut WasmEdge_String,
        Len: u32,
    ) -> u32;
}
extern "C" {
    #[doc = " Get the length of registered module list in store."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_StoreContext."]
    #[doc = ""]
    #[doc = " \\returns length of registered named module list."]
    pub fn WasmEdge_StoreListModuleLength(Cxt: *const WasmEdge_StoreContext) -> u32;
}
extern "C" {
    #[doc = " List the registered module names."]
    #[doc = ""]
    #[doc = " This function will list all registered module names."]
    #[doc = " The returned module names are created and stored in `Names` array, and the"]
    #[doc = " caller should call `WasmEdge_StringDelete` to delete them. If the `Names`"]
    #[doc = " buffer length is smaller than the result of the registered named module list"]
    #[doc = " size, the overflowed return values will be discarded."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_StoreContext."]
    #[doc = " \\param [out] Names the output names WasmEdge_String buffer of named modules."]
    #[doc = " \\param Len the buffer length."]
    #[doc = ""]
    #[doc = " \\returns actual registered named module list size."]
    pub fn WasmEdge_StoreListModule(
        Cxt: *mut WasmEdge_StoreContext,
        Names: *mut WasmEdge_String,
        Len: u32,
    ) -> u32;
}
extern "C" {
    #[doc = " Deletion of the WasmEdge_StoreContext."]
    #[doc = ""]
    #[doc = " After calling this function, the context will be freed and should __NOT__ be"]
    #[doc = " used."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_StoreContext to delete."]
    pub fn WasmEdge_StoreDelete(Cxt: *mut WasmEdge_StoreContext);
}
extern "C" {
    #[doc = " Creation of the WasmEdge_FunctionTypeContext."]
    #[doc = ""]
    #[doc = " The caller owns the object and should call `WasmEdge_FunctionTypeDelete` to"]
    #[doc = " free it."]
    #[doc = ""]
    #[doc = " \\param ParamList the value types list of parameters. NULL if the length is"]
    #[doc = " 0."]
    #[doc = " \\param ParamLen the ParamList buffer length."]
    #[doc = " \\param ReturnList the value types list of returns. NULL if the length is 0."]
    #[doc = " \\param ReturnLen the ReturnList buffer length."]
    #[doc = ""]
    #[doc = " \\returns pointer to context, NULL if failed."]
    pub fn WasmEdge_FunctionTypeCreate(
        ParamList: *const WasmEdge_ValType,
        ParamLen: u32,
        ReturnList: *const WasmEdge_ValType,
        ReturnLen: u32,
    ) -> *mut WasmEdge_FunctionTypeContext;
}
extern "C" {
    #[doc = " Get the parameter types list length from the WasmEdge_FunctionTypeContext."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_FunctionTypeContext."]
    #[doc = ""]
    #[doc = " \\returns the parameter types list length."]
    pub fn WasmEdge_FunctionTypeGetParametersLength(
        Cxt: *const WasmEdge_FunctionTypeContext,
    ) -> u32;
}
extern "C" {
    #[doc = " Get the parameter types list from the WasmEdge_FunctionTypeContext."]
    #[doc = ""]
    #[doc = " If the `List` buffer length is smaller than the length of the parameter type"]
    #[doc = " list, the overflowed values will be discarded."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_FunctionTypeContext."]
    #[doc = " \\param [out] List the WasmEdge_ValType buffer to fill the parameter value"]
    #[doc = " types."]
    #[doc = " \\param Len the value type buffer length."]
    #[doc = ""]
    #[doc = " \\returns the actual parameter types list length."]
    pub fn WasmEdge_FunctionTypeGetParameters(
        Cxt: *const WasmEdge_FunctionTypeContext,
        List: *mut WasmEdge_ValType,
        Len: u32,
    ) -> u32;
}
extern "C" {
    #[doc = " Get the return types list length from the WasmEdge_FunctionTypeContext."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_FunctionTypeContext."]
    #[doc = ""]
    #[doc = " \\returns the return types list length."]
    pub fn WasmEdge_FunctionTypeGetReturnsLength(Cxt: *const WasmEdge_FunctionTypeContext) -> u32;
}
extern "C" {
    #[doc = " Get the return types list from the WasmEdge_FunctionTypeContext."]
    #[doc = ""]
    #[doc = " If the `List` buffer length is smaller than the length of the return type"]
    #[doc = " list, the overflowed values will be discarded."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_FunctionTypeContext."]
    #[doc = " \\param [out] List the WasmEdge_ValType buffer to fill the return value"]
    #[doc = " types."]
    #[doc = " \\param Len the value type buffer length."]
    #[doc = ""]
    #[doc = " \\returns the actual return types list length."]
    pub fn WasmEdge_FunctionTypeGetReturns(
        Cxt: *const WasmEdge_FunctionTypeContext,
        List: *mut WasmEdge_ValType,
        Len: u32,
    ) -> u32;
}
extern "C" {
    #[doc = " Deletion of the WasmEdge_FunctionTypeContext."]
    #[doc = ""]
    #[doc = " After calling this function, the context will be freed and should __NOT__ be"]
    #[doc = " used."]
    #[doc = ""]
    #[doc = " \\param Cxt the WasmEdge_FunctionTypeContext to delete."]
    pub fn WasmEdge_FunctionTypeDelete(Cxt: *mut WasmEdge_FunctionTypeContext);
}
